# solution

./: # Mecas Technical Assessment.txt  .dockerignore  .gitignore  DECISION_LOG.md  Dockerfile  EXECUTIVE_SUMMARY.md  PHASE1_EXECUTIVE_SUMMARY.md  README.md  TEMPLATE_SETUP.md  VIDEO_PRESENTATION_SCRIPT.md  docker-compose.yml  phase1_analysis.py  pyproject.toml  tasks.py
notebooks/: ASSESSMENT_QUESTIONS_VERIFICATION.md  PART2_ASSESSMENT_VERIFICATION.md  PART2_TO_PART4_ALIGNMENT.md  PART4_EXECUTIVE_SYNTHESIS.md  STREAMLINED_SUMMARY.md  paint_analysis_complete.ipynb  paint_analysis_streamlined.ipynb  paint_quality_analysis.ipynb  test_notebook_execution.py  test_part1.py  test_part2.py  test_part3.py  test_streamlined.py  test_streamlined_comprehensive.py
src/: paint_analysis.py  visualization_generator.py
src/my_python_project/: __init__.py
tests/: test_example.py
