[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-python-project"
version = "0.1.0"
description = "A modern Python project template with excellent tooling"
authors = [
	{ name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # Data Science Core Stack
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",

    # Interactive Analysis and Visualization
    "jupyter>=1.0.0",
    "plotly>=5.15.0",
    "ipykernel>=6.25.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "invoke>=2.2.0",
    "types-click",
]

[project.scripts]
# Add your CLI scripts here
# Example: my-cli = "my_package.cli:main"

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.hatch.build.targets.wheel]
# Configure package discovery for when you add your source code
# Uncomment and customize one of these options:
packages = ["src/my_python_project"]  # Default src layout - rename as needed
# packages = ["your_package"]      # If using flat layout

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    # Type stubs for data science dependencies (only include available ones)
    "pandas-stubs>=2.0.0",
]
